--- a/discord.css
+++ b/discord.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Nova+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
 .theme-dark {
       --background-primary: #151726;
     --background-secondary: #1C1E2D;
